# ChangeLog for www-client/pybugz
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.80 2011/05/02 22:07:50 williamh Exp $

*pybugz-0.9.2 (02 May 2011)

  02 May 2011; William Hubbs <williamh@gentoo.org> +pybugz-0.9.2.ebuild:
  version bump for more changes with bugzilla 4.0.1

  01 May 2011; William Hubbs <williamh@gentoo.org> pybugz-0.9.1.ebuild,
  pybugz-9999.ebuild:
  fix ebuilds to set the python interpretor to 2.7

*pybugz-0.9.1 (30 Apr 2011)

  30 Apr 2011; William Hubbs <williamh@gentoo.org> pybugz-0.9.0.ebuild,
  +pybugz-0.9.1.ebuild:
  version bump for bugzilla 4.0.1 update

  26 Apr 2011; Jeroen Roovers <jer@gentoo.org> pybugz-0.9.0.ebuild:
  Stable for HPPA (bug #363921).

  25 Apr 2011; Markos Chandras <hwoarang@gentoo.org> pybugz-0.9.0.ebuild:
  Stable on amd64 wrt bug #363921

  22 Apr 2011; Raúl Porcel <armin76@gentoo.org> pybugz-0.9.0.ebuild:
  alpha/arm/ia64/sparc stable wrt #363921

  18 Apr 2011; Thomas Kahle <tomka@gentoo.org> pybugz-0.9.0.ebuild:
  x86 stable per bug 363921

*pybugz-0.9.0 (27 Mar 2011)

  27 Mar 2011; William Hubbs <williamh@gentoo.org> -pybugz-0.9.0_rc3.ebuild,
  +pybugz-0.9.0.ebuild:
  remove release candidates and release 0.9.0

*pybugz-0.9.0_rc3 (20 Mar 2011)

  20 Mar 2011; William Hubbs <williamh@gentoo.org> -pybugz-0.9.0_rc1.ebuild,
  -pybugz-0.9.0_rc2.ebuild, +pybugz-0.9.0_rc3.ebuild, pybugz-9999.ebuild:
  new release candidate and remove older ones

  19 Feb 2011; William Hubbs <williamh@gentoo.org> pybugz-9999.ebuild:
  sync live ebuild

*pybugz-0.9.0_rc2 (19 Feb 2011)

  19 Feb 2011; William Hubbs <williamh@gentoo.org> +pybugz-0.9.0_rc2.ebuild:
  version bump

  18 Feb 2011; William Hubbs <williamh@gentoo.org> pybugz-9999.ebuild:
  fix white space error

  18 Feb 2011; William Hubbs <williamh@gentoo.org> pybugz-9999.ebuild:
  update live ebuild to install man page

*pybugz-0.9.0_rc1 (07 Dec 2010)
