@@ -1,6 +1,9 @@
 # ChangeLog for www-client/pybugz
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.80 2011/05/02 22:07:50 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.81 2011/05/02 22:09:34 williamh Exp $
+
+  02 May 2011; William Hubbs <williamh@gentoo.org> -pybugz-0.9.1.ebuild:
+  remove broken version
 
 *pybugz-0.9.2 (02 May 2011)
 
